style : 디자인 일부 수정

--- a/src/containers/home/mapContainer.scss
+++ b/src/containers/home/mapContainer.scss
@@ -18,10 +18,10 @@
       border-radius: 0.5rem;
     }
     span.inDoor {
-      background: #bac8ff;
+      background: #868e96;
     }
     span.outDoor {
-      background: #b2f2bb;
+      background: #868e96;
     }
   }
 
