style: 로그 제거, '실내, 실외' 색상 변경

--- a/src/containers/home/mapContainer.scss
+++ b/src/containers/home/mapContainer.scss
@@ -18,10 +18,10 @@
       border-radius: 0.5rem;
     }
     span.inDoor {
-      background: #868e96;
+      background: #495057;
     }
     span.outDoor {
-      background: #868e96;
+      background: #495057;
     }
   }
 
